Provato a implementare endpoint e backend per le Immagini (caricamento immagine profilo o invio immagini in chat
