# doc/api.yaml
@@ -26,6 +26,8 @@ tags:
     description: Message reaction operations
   - name: Login
     description: Login user
+  - name: Media                
+    description: Image upload operations
 
 
 components:
@@ -2359,4 +2361,78 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
+  
+  
+  /media/upload:
+    post:
+      operationId: uploadFile
+      summary: Upload an image file
+      description: |-
+        Uploads an image (JPEG, PNG, GIF) to the server storage.
+        Returns a public URL that can be used in 'profilePhoto' or 'contentMess'.
+        Max file size: 10MB.
+      tags:
+        - Media
+      parameters:
+        - name: type
+          in: query
+          description: Specifies the destination folder. 'media' for chat images, 'avatar' for profile photos.
+          required: false   # impostato a false, tanto ho come default 'media', se non viene specificato
+          schema:
+            type: string
+            enum:
+              - avatar
+              - media
+            default: media
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              description: Payload containing the binary image file
+              properties:
+                file:
+                  type: string
+                  format: binary
+                  description: The binary image file (max 10MB)
+                  minLength: 0            
+                  maxLength: 10485760     # (10MB)
+              required:
+                - file
+      responses:
+        '201':
+          description: Image uploaded successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                description: JSON object containing the URL
+                properties:
+                  url:
+                    type: string
+                    format: url
+                    minLength: 10
+                    maxLength: 500
+                    description: The public URL of the uploaded image
+                    example: "https://api.web-chat-app.com/images/media/550e8400-e29b.jpg"
+              example:
+                url: "https://api.web-chat-app.com/images/media/550e8400-e29b.jpg"
+        '400':
+          description: Invalid file format or too large
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '401':
+          description: Unauthorized
+          content:                        
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '500':
+          description: Internal Server Error
+          content:                        
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
